[package]
name = "sl-viewer"
version = "0.2.3"
authors = ["David Bradford <david.bradford@mongodb.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# colored = "2.0"
clap = {version = "3.0", features = ["derive"] }
owo-colors = "3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
